force-app/main/default/objects/SCOC__IdentificationList__c/SCOC__IdentificationList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Identification List</description>
    <label>Identification</label>
    <nameField>
        <displayFormat>IDENT-{00000}</displayFormat>
        <label>Identification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>