force-app/main/default/objects/SCOC__IdentificationList__c/fields/SCOC__Date__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Date__c</fullName>
    <description>The system automatically populates this optional date field to indicate the date from the vendor response. By default, it is blank.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>