force-app/main/default/objects/SCOC__IdentificationList__c/fields/SCOC__SubjectIdentification__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SubjectIdentification__c</fullName>
    <description>Subject&apos;s regional identification.</description>
    <label>Subject Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>