force-app/main/default/objects/SCOC__IdentificationList__c/fields/SCOC__VariationIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VariationIndicator__c</fullName>
    <description>Variation Indicator</description>
    <label>Variation Indicator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>